# dmrgpp

./: .clangd  AUTHORS  CLAUDE.md  CMakeLists.txt  ChangeLog.txt  README.md  spack.yaml
LanczosPlusPlus/src/: CMakeLists.txt  LanczosDriver0.cpp  LanczosDriver2.cpp  LanczosDriver3.cpp  LanczosDriver4.cpp  LanczosDriver5.cpp  LanczosGlobals.cpp  SpinOrbital.cpp  ed.cpp  lanczos.cpp  lorentzian.cpp  thermal.cpp
LanczosPlusPlus/src/Engine/: BasisBase.h  Combinatorial.hh  DefaultSymmetry.h  Engine.h  ExactDiag.h  InputCheck.h  InternalProductOnTheFly.h  InternalProductStored.h  LabeledOperator.h  LanczosDriver.h  LanczosDriver1.h  LanczosGlobals.h  LanczosModelBase.hpp  LanczosOptions.h  ModelBase.h  ModelSelector.h  OneSector.h  Partitions.h  ProgramGlobals.h  RahulOperator.h  ReducedDensityMatrix.h  ReflectionSymmetry.h  TranslationSymmetry.h
LanczosPlusPlus/src/tests/: CMakeLists.txt  test_BasisOneSpin.cpp  test_Combinatorial.cpp
PsimagLite/src/: BLAS.h  CMakeLists.txt  ContinuedFraction.h  ContinuedFractionCollection.h  FreqEnum.h  FrequencyRange.hh  GetBraOrKet.h  GslWrapper.h  Limit.h  Matsubaras.h  MemResolv.h  Parallelizer2Pthread.h  PthreadsNg.h  RealFrequencyRange.hh  RedirectOutput.hh  kokkos_gemm.cpp  kokkos_gemm.h
PsimagLite/src/Ainur/: Ainur.h  AinurConvert.cpp  AinurLexical.h
PsimagLite/src/Geometry/: GeometryTerm.h
PsimagLite/src/Io/: IoNgSerializer.h
PsimagLite/src/PsimagLite/: BLAS.h  CMakeLists.txt  ChebyshevSerializer.h  Complex.h  CrsMatrix.h  KokkosType.h  LanczosSolver.h  Matrix.h  Matsubaras.h  MpiNo.h  PsimagLite.h  PsimagLiteConfig.h.in  Pthreads.h  Vector.h  kokkos_gemm.cpp  kokkos_gemm.h
PsimagLite/src/tests/: CMakeLists.txt  testArnoldiIteration.cpp  testArnoldiSaI.cpp  test_AkimaSpline.cpp  test_GetBraOrKet.cpp  test_InputPath.cpp  test_Matrix.cpp
cincuenta/src/: AndersonFunction.h  CMakeLists.txt  CincuentaInputCheck.h  ClusterG0.hpp  DensityOfStates.h  Dispersion.h  DmftSolver.h  Fit.h  FitFunction.hpp  FunctionOfFrequency.h  ImpuritySolverBase.h  ImpuritySolverDmrg.h  ImpuritySolverEqLanczos.h  ImpuritySolverExactDiag.h  ImpuritySolverNeqBase.h  ImpuritySolverNeqDmrg.h  ImpuritySolverNeqExactDiag.h  ImpuritySolverNeqGBEK.h  ImpuritySolverNeqLanczos.h  ImpuritySolverNeqTdmrg.h  KadanoffBaym.h  LanczosImpurityUtils.h  LatticeGf.h  MinParams.h  ModelParams.h  NeqBathDecomposition.h  NeqDmftSolver.h  NeqLatticeGf.h  ParamsDmftSolver.h  ParamsNeqDmftSolver.h  cincuenta.cpp  freeGimp.cpp
cincuenta/src/ExactDiag/: ModelParams.h
cincuenta/src/tests/: CMakeLists.txt  TestMatrixUtils.h  test_ImpuritySolverNeqExactDiag.cpp  test_ImpuritySolverNeqGBEK.cpp  test_KadanoffBaym.cpp  test_NeqBathDecomposition.cpp  test_spectralWeight.cpp
dmrg/: CMakeLists.txt  ObserveDriver.h  ProgramGlobals.cpp  Provenance.cpp  dmrg.cpp  introspect.cpp  manyOmegas.cpp  observe.cpp  procOmegas.cpp  toolboxdmrg.cpp
dmrg/Engine/: AlgebraForTargetingExpression.h  AlgebraicStringToNumber.h  ApplyOperatorExpression.h  ApplyOperatorLocal.h  Array.h  AuxForTargetingExpression.h  Basis.h  BlockDiagonalMatrix.h  BlockOffDiagMatrix.h  Braket.h  Checkpoint.h  ClebschGordan.h  ClebschGordanCached.h  Cloner.h  CompressedVector.h  ConjugateGradient.h  CookInputExpression.hh  CorrectionVectorAction.h  CorrectionVectorFunction.h  CorrectionVectorSkeleton.h  CorrelationsSkeleton.h  DensityMatrixBase.h  DensityMatrixLocal.h  DensityMatrixSvd.h  Diagonalization.h  DiskOrMemoryStack.h  DiskStackNg.h  DmrgOptions.h  DmrgRunner.h  DmrgSerializer.h  DmrgSolver.h  EnforcePhase.h  FactorForTargetingExpression.hh  FermionSign.h  FiniteLoop.h  FourPointCorrelations.h  GroupOfOneTimeEvolutions.h  HamiltonianAbstract.h  HamiltonianConnection.h  HamiltonianSymmetryLocal.h  (+107 more)
dmrg/Engine/MatrixVectorKron/: ArrayOfMatStruct.h  BatchedGemmCpu.h  BatchedGemmInclude.hh  BatchedGemmPluginSc.h  GenIjPatch.h  InitKronBase.h  InitKronHamiltonian.h  KronConnections.h  KronLogger.hh  KronMatrix.h  MatrixVectorKron.h
dmrg/Engine/Wft/: BlockDiagWf.h  ParallelWftMany.h  ParallelWftOne.h  ParallelWftSu2.h  WaveFunctionTransfBase.h  WaveFunctionTransfFactory.h  WaveFunctionTransfLocal.h  WaveStructCombined.h  WaveStructSvd.h  WftAccelBlocks.h  WftAccelPatches.h  WftAccelSvd.h  WftHelper.h  WftOptions.h  WftSparseTwoSite.h
dmrg/Engine/tests/: CMakeLists.txt  test_ApplyOperatorExpression.cpp  test_LastKrylovSlots.cpp
dmrg/GPUPlugin/: BatchedGemm.h  CMakeLists.txt  DMRGConfig.h.in  analysis.h  apply_Htarget_sparse_not_ready.cpp  apply_Htarget_vbatch.cpp  cal_kron_flops.cpp  dmrg_magma.h  dmrg_malloc.cpp  dmrg_types.h  dmrg_vbatch.cpp  dmrg_vbatch.h  estimate_work.h  gen_patches_comb.cpp  setup_matrix.cpp  setup_matrix.h  setup_sparse_batch.cpp  setup_vbatch.cpp  setup_vbatch.h  test_vbatch.cpp  test_vbatch.h
dmrg/KronUtil/: CMakeLists.txt  KronUtil.h  KronUtilWrapper.h  MatrixDenseOrSparse.h  csr_den_kron_mult.cpp  csr_kron_mult.cpp  csr_matmul_post.cpp  csr_matmul_pre.cpp  csr_submatrix.cpp  den_csr_kron_mult.cpp  den_kron_mult.cpp  den_matmul_post.cpp  den_matmul_pre.cpp  test1.cpp  util.h
dmrg/KronUtil/tests/: CMakeLists.txt  test_csr_kron_mult_imethod3.cpp
dmrg/Models/FeAsModel/: FeAsJzSymmetry.h  ModelFeBasedSc.h  ParametersModelFeAs.h
dmrg/Models/FermionSpinless/: FermionSpinless.h
dmrg/Models/GaugeSpin/: GaugeSpin.h  ParametersGaugeSpin.h  SuperOpHelperPlaquette.h
dmrg/Models/Graphene/: Graphene.h  ParametersGraphene.h
dmrg/Models/Heisenberg/: Aklt.h  HeisenbergMix.h  ModelHeisenberg.h  ParametersModelHeisenberg.h
dmrg/Models/HeisenbergAncillaC/: HeisenbergAncillaC.h  ParametersHeisenbergAncillaC.h
dmrg/Models/HolsteinSpinlessThin/: HolsteinSpinlessThin.h
dmrg/Models/HolsteinThin/: HolsteinThin.h
dmrg/Models/HubbardAncilla/: HelperHubbardAncilla.h  HubbardAncilla.h
dmrg/Models/HubbardAncillaExtended/: HubbardAncillaExtended.h
dmrg/Models/HubbardHolstein/: HubbardHolstein.h  ParametersHubbardHolstein.h
dmrg/Models/HubbardHolsteinSpinless/: HubbardHolsteinSpinless.h  ParametersHubbardHolsteinSpinless.h
dmrg/Models/HubbardMultiBand/: ModelHubbardMultiBand.h  (+1 more)
doc/: Makefile  (+8 more)
(+272 files in other folders)
